[gd_scene load_steps=4 format=3 uid="uid://c0jiye2k7bjui"]

[ext_resource type="Texture2D" uid="uid://l6lf83jdxkca" path="res://assets/items/wood.png" id="1_avmd0"]
[ext_resource type="Script" uid="uid://cyj2qxywlyqit" path="res://scenes/ui/inventory.gd" id="1_xeaml"]
[ext_resource type="Texture2D" uid="uid://mpvgwww51g22" path="res://assets/items/axe.png" id="2_xeaml"]

[node name="Inventory" type="GridContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
tooltip_text = "Inventory"
columns = 3
script = ExtResource("1_xeaml")

[node name="Inventory" type="Label" parent="."]
layout_mode = 2
text = "Inventory"

[node name="WoodSlot" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="WoodImage" type="TextureRect" parent="WoodSlot"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("1_avmd0")
expand_mode = 1
stretch_mode = 5
flip_v = true

[node name="WoodLabel" type="Label" parent="WoodSlot/WoodImage"]
layout_mode = 2
offset_top = 52.0
offset_right = 48.0
offset_bottom = 75.0

[node name="AxeSlot" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AxeImage" type="TextureRect" parent="AxeSlot"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_xeaml")
expand_mode = 1
stretch_mode = 5

[node name="AxeLabel" type="Label" parent="AxeSlot/AxeImage"]
layout_mode = 2
offset_top = 52.0
offset_right = 48.0
offset_bottom = 75.0
